# OpenSTG

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  code_tidy.sh  dos2unix.sh
include/: background.h  boss.h  bullet.h  buman.h  config.h  ecl.h  error.h  graphic.h  item.h  list.h  mathutil.h  openstg.h  player.h  playercfg.h  sched.h  shooter.h  texture_offset.h  ui.h  util.h
include/ecl/: boss.h  buman.h  debugger.h  ecl.h  enemy.h  mapper.h  parser.h  script.h
include/media/: background.h  graphic.h  texture_offset.h  ui.h
include/util/: array.h  error.h  list.h  mathutil.h  playercfg.h  util.h
src/: background.c  boss.c  bullet.c  buman.c  ecl.c  enemy.c  graphic.c  item.c  list.c  openstg.c  player.c  playercfg.c  sched.c  shooter.c  ui.c  util.c
src/ecl/: boss.c  buman.c  debugger.c  ecl.c  enemy.c  opcodes.c  parser.c  script.c
src/media/: background.c  graphic.c  ui.c
src/util/: array.c  list.c  playercfg.c  sched.c  util.c
